test/cli/test-context-apicall/crds/computeclass-crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: computeclasses.cloud.google.com
spec:
  group: cloud.google.com
  versions:
  - name: v1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            properties:
              priorities:
                type: array
                items:
                  type: object
                  properties:
                    spot:
                      type: boolean
              priorityRules:
                type: array
                items:
                  type: object
                  properties:
                    spot:
                      type: boolean
                    machineType:
                      type: string
                    location:
                      type: object
                    locationPolicy:
                      type: string
              description:
                type: string
              activeMigration:
                type: object
              autoscalingPolicy:
                type: object
              nodePoolConfig:
                type: object
              whenUnsatisfiable:
                type: string
  scope: Cluster
  names:
    plural: computeclasses
    kind: ComputeClass
    listKind: ComputeClassList
    singular: computeclass
    shortNames:
    - cc
