test/cli/test-context-apicall/resources/deployment-with-spot-computeclass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-spot-computeclass
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-container
        image: nginx:latest
