test/cli/test-context-apicall/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-context-crd-lookup
  
# context: context.yaml

# httpResponses:
# - http-file1.yaml
# - http-file2.yaml

clusterResources:
- clusterresources.yaml

policies:
  - policy.yaml

resources:
  - resources/pod-with-spot-computeclass.yaml
  - resources/pod-with-non-spot-computeclass.yaml
  - resources/pod-with-mixed-computeclass.yaml
  - resources/pod-with-default-computeclass.yaml
  - resources/deployment-with-spot-computeclass.yaml
  - resources/deployment-with-non-spot-computeclass.yaml

results:
  - policy: computeclasses-enforce-non-spot-usage-crd
    rule: deny-non-spot-in-unapproved-namespace
    kind: Pod
    resources:
      - pod-with-spot-computeclass
    result: pass

  - policy: computeclasses-enforce-non-spot-usage-crd
    rule: deny-non-spot-in-unapproved-namespace
    kind: Pod
    resources:
      - pod-with-non-spot-computeclass
    result: fail

  - policy: computeclasses-enforce-non-spot-usage-crd
    rule: deny-non-spot-in-unapproved-namespace
    kind: Pod
    resources:
      - pod-with-mixed-computeclass
    result: pass

  - policy: computeclasses-enforce-non-spot-usage-crd
    rule: deny-non-spot-in-unapproved-namespace
    kind: Pod
    resources:
      - pod-with-default-computeclass
    result: pass

  - policy: computeclasses-enforce-non-spot-usage-crd
    rule: deny-non-spot-in-unapproved-namespace
    kind: Deployment
    resources:
      - deployment-with-spot-computeclass
    result: pass

  - policy: computeclasses-enforce-non-spot-usage-crd
    rule: deny-non-spot-in-unapproved-namespace
    kind: Deployment
    resources:
      - deployment-with-non-spot-computeclass
    result: fail
